--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -14,7 +14,7 @@ const { id } = Astro.props;
   aria-label="Toggle light and dark theme"
   class={cn(
     "flex",
-    "size-9 rounded-full p-2 items-center justify-center",
+    "size-7 xs:size-9 rounded-full p-2 items-center justify-center",
     "text-black/80 dark:text-white/80",
     "bg-transparent hover:bg-black/20 dark:hover:bg-white/20",
     "stroke-current hover:stroke-black hover:dark:stroke-white",
